cmake_minimum_required(VERSION 2.8)
project( lstmNetwork )
find_package( OpenCV REQUIRED )
add_definitions(-std=c++14)
file(GLOB SRC . "network/*.cpp")
file(GLOB PCA . "pca/*.cpp")
add_executable( lstm main.cpp ${SRC} ${PCA} )
target_link_libraries( lstm ${OpenCV_LIBS} )
add_executable( pca-matrix pca.cpp ${PCA} )
target_link_libraries( pca-matrix ${OpenCV_LIBS} )
